Lasagna recipe steps and better page links added
First I finished off the steps section to the lasagna recipe page.
I created an ordered list defining each step, and created an individual
unordered list below each step with the instsructions.
I chose to add in the extra unordered lists to create an indentation
with a bullet point to make the steps more readable.

Afterwords I added a home page and lasagna recipe link to both
the home page and lasagna recipe page, and presented them
in an unordered list to give the website a cleaner appearance.

I may change this later on so that recipe pages only link back
to the home page, any only the home page can link to other recipes.
but I'm not sure how I'd like this  aspect of the website
to look just yet.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,9 +6,16 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Classic Homestyle Lasagna</h1>
+
+    <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="../index.html">Home Page</a></li>
+        <li><a href="lasagna.html">Classic Homestyle Lasagna</a></li>
+    </ul>
+
+    <h2>Classic Homestyle Lasagna</h2>
     <img src="../images/classic-homestyle-lasagna.jpg" width="300">
-    <h2>Description</h2>
+    <h3>Description</h3>
     <p>
         This classic lasagna recipe will be sure to make you feel at home.
     </p>
@@ -48,7 +55,38 @@
     <h3>Steps</h3>
 
     <ol>
-        <li></li>
+        <li>
+            <strong>Cook the meat: </strong>
+            <ul>
+                <li>Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Cook the noodles</strong>
+            <ul>
+                <li>Boil the lasagna noodles in lightly salted water until they're al dente.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Make the cheese layer</strong>
+            <ul>
+                <li>Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper in a bowl.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Assemble the lasagna</strong>
+            <ul>
+                <li>Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Bake the lasagna</strong>
+            <ul>
+                <li>Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.
+                </li>
+            </ul>
+        </li>
+        <li><strong>Enjoy!</strong></li>
     </ol>
 
 </body>
