--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-
     <h1>Odin Recipes</h1>
-
-    <a href="recipes/lasagna.html">Classic Homestyle Lasagna</a>
-
+    <ul>
+        <li><a href="index.html">Home Page</a></li>
+        <li><a href="recipes/lasagna.html">Classic Homestyle Lasagna</a></li>
+    </ul>
 </body>
 
 </html>
