--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -58,31 +58,31 @@
         <li>
             <strong>Cook the meat: </strong>
             <ul>
-                <li>Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</li>
+                <li style="width: 40%">Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</li>
             </ul>
         </li>
         <li>
             <strong>Cook the noodles</strong>
             <ul>
-                <li>Boil the lasagna noodles in lightly salted water until they're al dente.</li>
+                <li style="width: 40%">Boil the lasagna noodles in lightly salted water until they're al dente.</li>
             </ul>
         </li>
         <li>
             <strong>Make the cheese layer</strong>
             <ul>
-                <li>Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper in a bowl.</li>
+                <li style="width: 40%">Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper in a bowl.</li>
             </ul>
         </li>
         <li>
             <strong>Assemble the lasagna</strong>
             <ul>
-                <li>Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</li>
+                <li style="width: 40%">Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</li>
             </ul>
         </li>
         <li>
             <strong>Bake the lasagna</strong>
             <ul>
-                <li>Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.
+                <li style="width: 40%">Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.
                 </li>
             </ul>
         </li>
