--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,11 +10,12 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="../index.html">Home Page</a></li>
-        <li><a href="lasagna.html">Classic Homestyle Lasagna</a></li>
+        <li><a href="./lasagna.html">Classic Homestyle Lasagna</a></li>
+        <li><a href="./maple-salmon.html">Maple Salmon</a></li>
     </ul>
 
     <h2>Classic Homestyle Lasagna</h2>
-    <img src="../images/classic-homestyle-lasagna.jpg" width="300">
+    <img src="../images/classic-homestyle-lasagna.jpg" width="300" alt="lasagna on a plate">
     <h3>Description</h3>
     <p>
         This classic lasagna recipe will be sure to make you feel at home.
