Link to maple-salmon.html added to home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="index.html">Home Page</a></li>
         <li><a href="recipes/lasagna.html">Classic Homestyle Lasagna</a></li>
+        <li><a href="recipes/maple-salmon.html">Maple Salmon</a></li>
     </ul>
 </body>
 
