--- a/recipes/maple-salmon.html
+++ b/recipes/maple-salmon.html
@@ -16,6 +16,75 @@
 
     <h2>Maple Salmon</h2>
     <img src="../images/maple-salmon.jpg" width="350" alt="salmon with asparagus over white rice">
+    <h3>Description</h3>
+    <p>
+        This delicious maple salmon recipe has a perfect balance of savory and sweet
+    </p>
+
+    <ul>
+        <li><strong>Prep Time:</strong> 10 mins</li>
+        <li><strong>Cook Time:</strong> 20 mins</li>
+        <li><strong>Additional Time:</strong> 30 mins</li>
+        <li><strong>Total Time:</strong> 1 hr</li>
+        <li><strong>Servings:</strong> 4</li>
+    </ul>
+
+    <h3>Ingredients</h3>
+
+    <ul>
+        <li><strong>1/4 cup </strong>Maple Syrup</li>
+        <li><strong>2 tablespoons </strong>Soy Sauce</li>
+        <li><strong>1 clove </strong>Minced Garlic</li>
+        <li><strong>1/4 teaspoon </strong>Garlic Salt</li>
+        <li><strong>1/8 teaspoon </strong>Ground Black Pepper</li>
+        <li><strong>1 pound </strong>Salmon</li>
+    </ul>
+
+    <h3>Steps</h3>
+
+    <ol>
+        <li>
+            <strong>Step 1</strong>
+            <ul>
+                <li style="width: 40%">Gather all ingredients.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Step 2</strong>
+            <ul>
+                <li style="width: 40%">Stir maple syrup, soy sauce, garlic, garlic salt, and pepper together in a small bowl.
+                </li>
+            </ul>
+        </li>
+        <li>
+            <strong>Step 3</strong>
+            <ul>
+                <li style="width: 40%">Cut salmon into 4 equal-sized fillets; place in a shallow glass baking dish and coat with maple syrup mixture. Cover the dish and marinate salmon in the refrigerator for 30 minutes, turning once halfway.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Step 4</strong>
+            <ul>
+                <li style="width: 40%">Preheat the oven to 400 degrees F.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Step 5</strong>
+            <ul>
+                <li style="width: 40%">Place the baking dish in the preheated oven and bake salmon uncovered until flesh easily flakes with a fork, about 20 minutes.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Step 6</strong>
+            <ul>
+                <li style="width: 40%">Enjoy!</li>
+            </ul>
+        </li>
+            </ul>
+        </li>
+    </ol>
+
+
 </body>
 
 </html>
