Changed format of "Home Page" link to look nicer
To give the home page link a more visually appealing look,
I removed it from the unordered list of web page links on my site.
I then placed it outside of the list and added the
<strong> element to it. I made this change to all pages.

I also made the description for the maple salmon recipe slightly
better by adding "flavors" to the end of the sentence and adding
a period to maintain the format of the site.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,8 +8,9 @@
 <body>
 
     <h1>Odin Recipes</h1>
+    <a href="../index.html"><strong>Home Page</strong></a>
     <ul>
-        <li><a href="../index.html">Home Page</a></li>
+
         <li><a href="./lasagna.html">Classic Homestyle Lasagna</a></li>
         <li><a href="./maple-salmon.html">Maple Salmon</a></li>
     </ul>
