--- a/recipes/maple-salmon.html
+++ b/recipes/maple-salmon.html
@@ -8,8 +8,8 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <a href="../index.html"><strong>Home Page</strong></a>
     <ul>
-        <li><a href="../index.html">Home Page</a></li>
         <li><a href="./lasagna.html">Classic Homestyle Lasagna</a></li>
         <li><a href="./maple-salmon.html">Maple Salmon</a></li>
     </ul>
@@ -18,7 +18,7 @@
     <img src="../images/maple-salmon.jpg" width="350" alt="salmon with asparagus over white rice">
     <h3>Description</h3>
     <p>
-        This delicious maple salmon recipe has a perfect balance of savory and sweet
+        This delicious maple salmon recipe has a perfect balance of savory and sweet flavors.
     </p>
 
     <ul>
