--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <a href="index.html"><strong>Home Page</strong></a>
     <ul>
-        <li><a href="index.html">Home Page</a></li>
         <li><a href="recipes/lasagna.html">Classic Homestyle Lasagna</a></li>
         <li><a href="recipes/maple-salmon.html">Maple Salmon</a></li>
     </ul>
