Added baked chkn breast recipe and format to page
I first created the new page "baked-chicken-breast.html",
then added in the basic the name of the recipe, and an image
of the finished dish. I them created the basic format for the rest
of the recipe page including the description, ingredients section,
and recipe intructions.

I then went back and added a link to this new recipe on all other pages,
and added links onto the new chicken breast recipe page to the other
pages on my site.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Classic Homestyle Lasagna</a></li>
         <li><a href="recipes/maple-salmon.html">Maple Salmon</a></li>
+        <li><a href="recipes/baked-chicken-breast.html">Baked Chicken Breast</a></li>
     </ul>
 </body>
 
