--- a/recipes/maple-salmon.html
+++ b/recipes/maple-salmon.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="./lasagna.html">Classic Homestyle Lasagna</a></li>
         <li><a href="./maple-salmon.html">Maple Salmon</a></li>
+        <li><a href="./baked-chicken-breast.html">Baked Chicken Breast</a></li>
     </ul>
 
     <h2>Maple Salmon</h2>
