--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,6 +13,7 @@
 
         <li><a href="./lasagna.html">Classic Homestyle Lasagna</a></li>
         <li><a href="./maple-salmon.html">Maple Salmon</a></li>
+        <li><a href="./baked-chicken-breast.html">Baked Chicken Breast</a></li>
     </ul>
 
     <h2>Classic Homestyle Lasagna</h2>
