--- a/recipes/baked-chicken-breast.html
+++ b/recipes/baked-chicken-breast.html
@@ -24,20 +24,20 @@
     </P>
 
     <ul>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
+        <li><strong>Prep Time: </strong>10 mins</li>
+        <li><strong>Cook Time: </strong>25 mins</li>
+        <li><strong>Total Time: </strong>35 mins</li>
+        <li><strong>Servings: </strong>4</li>
     </ul>
 
     <h3>Ingredients</h3>
 
     <ul>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
+        <li><strong>4 (5 ounce) </strong>Skinless, bonelss chicken breast halves</li>
+        <li><strong>2 Tablespoons </strong> Olive Oil</li>
+        <li><strong>1/2 Teaspoon </strong>Coarse Sea Salt</li>
+        <li><strong>1 pinch </strong>Creole Seasoning</li>
+        <li><strong>1 Tablespoon </strong>Chicken Broth</li>
     </ul>
 
     <h3>Steps</h3>
@@ -46,43 +46,44 @@
         <li>
             <strong>Step 1</strong>
             <ul>
-                <li style="width: 40%"></li>
+                <li style="width: 40%">Gather all ingredients</li>
             </ul>
         </li>
         <li>
             <strong>Step 2</strong>
             <ul>
-                <li style="width: 40%"></li>
+                <li style="width: 40%">Preheat the oven to 400 degrees F.</li>
             </ul>
         </li>
         <li>
             <strong>Step 3</strong>
             <ul>
-                <li style="width: 40%"></li>
+                <li style="width: 40%">Rub chicken breasts with olive oil and sprinkle both sides with salt and Creole seasoning. Place chicken in a broiler pan.</li>
             </ul>
         </li>
         <li>
             <strong>Step 4</strong>
             <ul>
-                <li style="width: 40%"></li>
+                <li style="width: 40%">Bake in the preheated oven for 10 minutes. Flip chicken and cook until no longer pink in the center and the juices run clear, about 15 minutes more. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
             </ul>
         </li>
         <li>
             <strong>Step 5</strong>
             <ul>
-                <li style="width: 40%"></li>
+                <li style="width: 40%">Remove chicken to a plate.</li>
             </ul>
         </li>
         <li>
             <strong>Step 6</strong>
             <ul>
-                <li style="width: 40%"></li>
+                <li style="width: 40%">Pour chicken broth into the pan and scrape any browned bits off the bottom with a flat-edged wooden spatula. Add more broth if needed to dislodge the browned bits, but not too much or it will be watery.
+                </li>
             </ul>
         </li>
         <li>
             <strong>Step 7</strong>
             <ul>
-                <li style="width: 40%"></li>
+                <li style="width: 40%">To serve, drizzle the pan sauce over the chicken.</li>
             </ul>
         </li>
     </ol>
