Moved css code for pages into external document
I began by removing the inline css to my steps sections on all recipe
pages, then classed the unordered lists "steps-list" and each individual
step with an ID of "steps"

In my stylesheet, I then coded in the width of each step to 40% by
grouping the two selectors "steps-list" and "steps".

--- a/recipes/maple-salmon.html
+++ b/recipes/maple-salmon.html
@@ -44,42 +44,42 @@
 
     <h3>Steps</h3>
 
-    <ol>
+    <ol class="steps-list">
         <li>
             <strong>Step 1</strong>
             <ul>
-                <li style="width: 40%">Gather all ingredients.</li>
+                <li id="steps">Gather all ingredients.</li>
             </ul>
         </li>
         <li>
             <strong>Step 2</strong>
             <ul>
-                <li style="width: 40%">Stir maple syrup, soy sauce, garlic, garlic salt, and pepper together in a small bowl.
+                <li id="steps">Stir maple syrup, soy sauce, garlic, garlic salt, and pepper together in a small bowl.
                 </li>
             </ul>
         </li>
         <li>
             <strong>Step 3</strong>
             <ul>
-                <li style="width: 40%">Cut salmon into 4 equal-sized fillets; place in a shallow glass baking dish and coat with maple syrup mixture. Cover the dish and marinate salmon in the refrigerator for 30 minutes, turning once halfway.</li>
+                <li id="steps">Cut salmon into 4 equal-sized fillets; place in a shallow glass baking dish and coat with maple syrup mixture. Cover the dish and marinate salmon in the refrigerator for 30 minutes, turning once halfway.</li>
             </ul>
         </li>
         <li>
             <strong>Step 4</strong>
             <ul>
-                <li style="width: 40%">Preheat the oven to 400 degrees F.</li>
+                <li id="steps">Preheat the oven to 400 degrees F.</li>
             </ul>
         </li>
         <li>
             <strong>Step 5</strong>
             <ul>
-                <li style="width: 40%">Place the baking dish in the preheated oven and bake salmon uncovered until flesh easily flakes with a fork, about 20 minutes.</li>
+                <li id="steps">Place the baking dish in the preheated oven and bake salmon uncovered until flesh easily flakes with a fork, about 20 minutes.</li>
             </ul>
         </li>
         <li>
             <strong>Step 6</strong>
             <ul>
-                <li style="width: 40%">Enjoy!</li>
+                <li id="steps">Enjoy!</li>
             </ul>
         </li>
             </ul>
