--- a/recipes/baked-chicken-breast.html
+++ b/recipes/baked-chicken-breast.html
@@ -43,48 +43,48 @@
 
     <h3>Steps</h3>
 
-    <ol>
+    <ol class="steps-list">
         <li>
             <strong>Step 1</strong>
             <ul>
-                <li style="width: 40%">Gather all ingredients</li>
+                <li id="steps">Gather all ingredients</li>
             </ul>
         </li>
         <li>
             <strong>Step 2</strong>
             <ul>
-                <li style="width: 40%">Preheat the oven to 400 degrees F.</li>
+                <li id="steps">Preheat the oven to 400 degrees F.</li>
             </ul>
         </li>
         <li>
             <strong>Step 3</strong>
             <ul>
-                <li style="width: 40%">Rub chicken breasts with olive oil and sprinkle both sides with salt and Creole seasoning. Place chicken in a broiler pan.</li>
+                <li id="steps">Rub chicken breasts with olive oil and sprinkle both sides with salt and Creole seasoning. Place chicken in a broiler pan.</li>
             </ul>
         </li>
         <li>
             <strong>Step 4</strong>
             <ul>
-                <li style="width: 40%">Bake in the preheated oven for 10 minutes. Flip chicken and cook until no longer pink in the center and the juices run clear, about 15 minutes more. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
+                <li id="steps">Bake in the preheated oven for 10 minutes. Flip chicken and cook until no longer pink in the center and the juices run clear, about 15 minutes more. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
             </ul>
         </li>
         <li>
             <strong>Step 5</strong>
             <ul>
-                <li style="width: 40%">Remove chicken to a plate.</li>
+                <li id="steps">Remove chicken to a plate.</li>
             </ul>
         </li>
         <li>
             <strong>Step 6</strong>
             <ul>
-                <li style="width: 40%">Pour chicken broth into the pan and scrape any browned bits off the bottom with a flat-edged wooden spatula. Add more broth if needed to dislodge the browned bits, but not too much or it will be watery.
+                <li id="steps">Pour chicken broth into the pan and scrape any browned bits off the bottom with a flat-edged wooden spatula. Add more broth if needed to dislodge the browned bits, but not too much or it will be watery.
                 </li>
             </ul>
         </li>
         <li>
             <strong>Step 7</strong>
             <ul>
-                <li style="width: 40%">To serve, drizzle the pan sauce over the chicken.</li>
+                <li id="steps">To serve, drizzle the pan sauce over the chicken.</li>
             </ul>
         </li>
     </ol>
